--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
+    "gsap": "^3.9.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.44.0"
+    "react-slick": "^0.28.1",
+    "sass": "^1.44.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "eslint": "7.32.0",
